--- a/KDS.html
+++ b/KDS.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>potrero</title>
+    <link rel="stylesheet" href="./css/color.css">
   </head>
   <body>
   <h1>AJI DE GALLINA</h1>
   <br>
+  <a href="https://www.comedera.com/receta-de-aji-de-gallina/"target="blank">google</a>
+  <br>
+  <a href="https://www.gourmet.cl/recetas/aji-de-gallina/"target="blank">google</a>
+  <br>
+  <a href="https://www.recetasdeescandalo.com/aji-de-gallina-receta-peruana-tradicional-y-deliciosa/"target="blank">google</a>
+
+
+
+
+
+  <header>
+
+
+
+  <h3>El ají de gallina es un plato típico de Perú, concretamente de la zona costera. Sus ingredientes principales son la gallina o el pollo, la leche evaporada y el ají amarillo. Se espesa con pan o galletas saladas, lo que le otorga una textura muy peculiar.</h3>
+   </header>
+  <br>
   <ul>
+
+<section>
+
+<aside class="section1">
+
+
+
+    <h2>ingredinetes</h2>
+
+
+
+
     <li>pechuga de pollo</li>
     <li>ajies amarilos</li>
     <li>cebolla</li>
@@ -23,6 +53,16 @@
   </ul>
   <br>
   <ol>
+
+</aside>
+
+</section>
+
+
+
+
+    <h2>preparacion</h2>
+
     <li>poner a cosinar la pechuga de pollo</li>
     <li>hacer una pasta con el aji amarillo</li>
     <li>triturar las nueces</li>
@@ -37,7 +77,12 @@
     <li>despues de 10 minutos poner la leche evaporada</li>
  <ol>
 <br>
+
+
 <img src="./imagen/aji de gallina.webp" alt="aji de gallina">
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CG29GGF26SM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<br>
 <br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d52584.619368711865!2d-58.71521203554029!3d-34.53991326252538!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1689127895482!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
